@@ -6,6 +6,7 @@
 - Fix count and calculate searching with count_includes
 - Fix action_after_create
 - Cache associations options (for :select form_ui on associations), it can be disabled with config.cache_association_options = false
+- Clean some code so we can stop changing @record in partials and using @record in helpers
 
 = 3.3.0
 - Unify field overrides and list_ui method signatures
